betta-0.0.4.scss
/* ... */
#betta_menu-button,
#betta_home-button button,
#betta_back-button button {
  box-shadow: $shadow-level-3;
}

.dark #betta_menu-button,
.dark #betta_home-button button,
.dark #betta_back-button button {
  box-shadow: $dark-shadow-level-3;
}

#betta_menu-button:active,
#betta_home-button:active button,
#betta_back-button:active button {
  box-shadow: $shadow-level-0;
}

#betta_home-button img {
  height: auto;
}

#betta_theme-button {
  width: 3rem;
  height: 3rem;
}

#betta_theme-light-icon,
.dark #betta_theme-dark-icon {
  display: none;
}

#betta_theme-dark-icon,
.dark #betta_theme-light-icon {
  display: block;
}

@media (max-width: 800px) {
  #betta_menu-button,
  #betta_back-button {
    top: auto;
    bottom: 1rem;
    left: calc(50vw - 2rem);
    width: 4rem;
    height: 4rem;
  }

  #betta_theme-button {
    width: 4rem;
    height: 4rem;
  }

  #betta_menu-button {
    display: block;
  }

  #betta_home-button {
    top: auto;
    bottom: 0.75rem;
    left: calc(50vw - 6rem) !important;
  }
}
/*-------------------------------------*/

/*---------------------------------------
	Footer
---------------------------------------*/
footer {
  text-align: center;
}

footer p a {
  margin: 0;
}

footer .logo {
  height: 14rem;
  width: 14rem;
  padding: 2rem;
  margin: 0 auto 2rem auto;
}
/*-------------------------------------*/

/*---------------------------------------
	Custom Icon Replacements for
    Material Icons
---------------------------------------*/
.material-icons-round.custom-icon > img {
  /* deprecated */
  height: 1.5rem;
  color: $color-black;
}

span.icon {
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0rem;
}

span.icon > img {
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
}

.dark span.icon > img {
  filter: none;
}

.dark p span.icon > img {
  border-radius: $radius-round;
  background-color: $color-base-7;
}

span.icon.big {
  height: 4rem;
  width: 4rem;
  line-height: 0rem;
}

span.icon.big > img {
  height: 4rem;
  width: 4rem;
  line-height: 0rem;
  background: $color-base-2;
  border-radius: $radius-round;
  padding: 1rem;
}

.dark span.icon.big > img {
  background: $color-base-8;
}

p > .icon {
  vertical-align: bottom;
}
/*-------------------------------------*/

/*---------------------------------------
	Buttons
---------------------------------------*/
button {
  vertical-align: top;
  text-align: center;
  border: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0.5rem 1rem;
  border-radius: 2rem;
  box-shadow: $shadow-level-1;
  background: $color-white;
  transition: $transition-default;
  font-weight: 700;
  text-transform: uppercase;
}

.dark button {
  box-shadow: $dark-shadow-level-1;
  background: $color-base-7;
}

button:disabled {
  box-shadow: none;
  background-color: $color-base-1;
}

.dark button:disabled {
  background-color: $color-base-9;
}

button.dark {
  background: $color-base-10;
}

.dark button.dark {
  background: $color-base-1;
}

@media (hover: hover) {
  button:hover:enabled {
    cursor: pointer;
    background: $color-base-1;
    transition: $transition-default;
  }

  .dark button:hover:enabled {
    background: $color-base-8;
  }

  button.dark:hover:enabled {
    background: #616161; /* TEMP */
  }
}

button:active:enabled {
  box-shadow: $shadow-level-0;
  background: $color-base-2;
}

.dark button:active:enabled {
  background: $color-base-9;
}

button.dark:active:enabled {
  background: #424242; /* TEMP */
}

.icon-button {
  padding: 0.5rem;
  border-radius: 2rem;
}

.icon-button.filled .material-icons-round /* deprecated */
{
  color: $color-black;
}

.dark button.icon-button img {
  filter: brightness(1);
}

.dark .icon-button.filled .icon {
  color: $color-base-1;
}

.icon-button.filled:disabled,
.icon-button.filled:disabled .material-icons-round, /* deprecated */
.icon-button.filled:disabled .icon {
  color: $color-base-7;
}

.dark .icon-button.filled:disabled,
.dark .icon-button.filled:disabled .icon {
  color: $color-base-7;
}

.icon-button .material-icons-round, /* deprecated */
.icon-button>.icon {
  vertical-align: top;
  color: $color-black;
  font-size: 1.8rem;
}

.dark .icon-button>.icon {
  color: $color-base-1;
}

.icon-button .material-icons-round.custom-icon, /* deprecated */
.icon-button>.icon {
  font-size: 1rem;
}

.icon-button.dark .material-icons-round {
  /* deprecated */
  color: $color-white;
}

@media (max-width: 800px) {
  .icon-button {
    padding: 0.75rem;
  }

  body>.icon-button .material-icons-round, /* deprecated */
    .icon-button>.icon {
    font-size: 2.5rem;
  }

  .icon-button .material-icons-round.custom-icon img, /* deprecated */
    .icon-button>.icon>img {
    height: 2.5rem;
    width: 2.5rem;
  }
}

.sliding-button {
  display: inline-block;
  margin: auto;
  margin-right: 0;
}

.sliding-button > .content {
  height: 1.5rem;
  width: 0;
  margin-bottom: -0.75rem;
  overflow: hidden;
  display: inline-block;
  transition: $transition-default;
}

.sliding-button:hover > .content {
  width: 12rem;
  display: inline-block;
  transition: $transition-default;
}

/* Simple button */

button.icon-button.simple,
.dark button.icon-button.simple {
  background: none;
  box-shadow: none;
  opacity: 0.5;
}

@media (hover: hover) {
  button.icon-button.simple:hover,
  .dark button.icon-button.simple:hover {
    background: none;
    opacity: 1;
  }
}

button.icon-button.simple:active,
.dark button.icon-button.simple:active {
  opacity: 0.75;
}

/*-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
    Custom Classes
-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-*/

.center {
  text-align: center;
}

.align-right {
  text-align: right;
}

.italic {
  font-style: italic;
}

/* 
Used to set preferred break points, which will occur
between lines
*/
.line {
  display: inline-block;
}

.no-scroll {
  overflow: hidden;
}
/* ... */

